rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__multiple_missing_semicolons.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (multiple_missing_semicolons),\n\"foo\n    {\n        foo\n    }\")"
---
error: Expected ';'
  ┌─ multiple_missing_semicolons:1:4
  │
1 │ foo
  │    ^ Expected ';'

error: Expected ';'
  ┌─ multiple_missing_semicolons:3:12
  │
3 │         foo
  │            ^ Expected ';'
